Fix odd page scale on mobile devices (#53)
* [fix] Disable zoom on page completely

Disable scale capabilities on a page to resolve the problem of navbar on touch devices. Non-touch devices are not affected at all.

* Eliminate creepy uneven spacepse between search grid columns

--- a/src/index.css
+++ b/src/index.css
@@ -9,6 +9,10 @@ body {
 
   max-width: 100%;
   overflow-x: hidden;
+  position: relative;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 code {
